[gd_scene load_steps=10 format=3 uid="uid://ehlpd3dbh76o"]

[ext_resource type="Script" path="res://Scripts/HeartsFinal.gd" id="1_5nigj"]
[ext_resource type="Texture2D" uid="uid://uaaffohx7woa" path="res://Sprites/HeartIdle.png" id="1_xt46h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8do1f"]
atlas = ExtResource("1_xt46h")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tiyym"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8do1f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6ugk8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(572, 711)]
}

[sub_resource type="Animation" id="Animation_mup4e"]
resource_name = "Up"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5, 3.5),
"transitions": PackedFloat32Array(0.241484, 0.241484),
"update": 0,
"values": [Vector2(300, 711), Vector2(300, 440)]
}

[sub_resource type="Animation" id="Animation_04crv"]
resource_name = "Up2"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 2.2),
"transitions": PackedFloat32Array(0.241, 0.241),
"update": 0,
"values": [Vector2(572, 711), Vector2(572, 440)]
}

[sub_resource type="Animation" id="Animation_4kbxl"]
resource_name = "Up3"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8, 2.9),
"transitions": PackedFloat32Array(0.24, 0.24),
"update": 0,
"values": [Vector2(830, 711), Vector2(830, 440)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01rre"]
_data = {
"RESET": SubResource("Animation_6ugk8"),
"Up": SubResource("Animation_mup4e"),
"Up2": SubResource("Animation_04crv"),
"Up3": SubResource("Animation_4kbxl")
}

[node name="FinalCutscene" type="Node2D"]

[node name="Hearts" type="Node" parent="."]
script = ExtResource("1_5nigj")

[node name="Heart1" type="AnimatedSprite2D" parent="Hearts"]
position = Vector2(300, 472.68)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tiyym")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hearts/Heart1"]
libraries = {
"": SubResource("AnimationLibrary_01rre")
}

[node name="Heart2" type="AnimatedSprite2D" parent="Hearts"]
position = Vector2(572, 711)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tiyym")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hearts/Heart2"]
libraries = {
"": SubResource("AnimationLibrary_01rre")
}

[node name="Heart3" type="AnimatedSprite2D" parent="Hearts"]
position = Vector2(830, 711)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tiyym")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hearts/Heart3"]
libraries = {
"": SubResource("AnimationLibrary_01rre")
}
